--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/muuri/storyview/columns</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Branch</li>
@@ -183,6 +185,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Suggestions</li>
+
 </ul>
 </p>
 
@@ -197,6 +201,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210825165236109" modified="20210825165237698" title="$:/config/muuri/storyview/columns">
+<pre>1</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -11683,13 +11690,13 @@ Error message and password prompt
 <div created="20210825164004321" modified="20210825164004321" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210825163958384" modified="20210825163959537" title="$:/state/tab/sidebar--595412856">
+<div created="20210825163958384" modified="20210825165225777" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="Suggestions" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -11800,6 +11807,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210825165239451" modified="20210825165245202" tags="" title="Suggestions">
+<pre></pre>
 </div>
 
 
