--- a/index.html
+++ b/index.html
@@ -173,8 +173,6 @@ Error message and password prompt
 
 <li>$:/plugins/sq/streams</li>
 
-<li>$:/state/sidebar</li>
-
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -188,8 +186,6 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
-
-<li>$:/view</li>
 
 <li>Suggestions</li>
 
@@ -207,7 +203,7 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20210825165236109" modified="20210825165329786" title="$:/config/muuri/storyview/columns">
+<div created="20210825165236109" modified="20210825165237698" title="$:/config/muuri/storyview/columns">
 <pre>1</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
@@ -12077,22 +12073,19 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210825165325825" modified="20210825165325825" title="$:/state/sidebar">
-<pre>no</pre>
-</div>
-<div created="20210825164001969" modified="20210825164001969" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210825164001969" modified="20210825165447209" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20210825164004321" modified="20210825164004321" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20210825163958384" modified="20210825165324578" title="$:/state/tab/sidebar--595412856">
+<div created="20210825163958384" modified="20210825165225777" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>yes</pre>
 </div>
-<div list="$:/Import Suggestions" title="$:/StoryList">
+<div created="20210825165445322" list="$:/Import $:/ControlPanel GettingStarted" modified="20210825165445322" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -12203,9 +12196,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20210825165318522" modified="20210825165318522" title="$:/view">
-<pre>muuri</pre>
 </div>
 <div created="20210825165239451" modified="20210825165245202" tags="" title="Suggestions">
 <pre></pre>
