--- a/index.html
+++ b/index.html
@@ -12085,7 +12085,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>yes</pre>
 </div>
-<div created="20210825165445322" list="$:/Import $:/ControlPanel GettingStarted" modified="20210825165445322" title="$:/StoryList">
+<div created="20210825165445322" list="$:/Import" modified="20210825165445322" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
