Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Branch</li>
 
 <li>$:/GitHub/Filename</li>
@@ -10070,6 +10072,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210825165519414" modified="20210825165520517" title="$:/DefaultTiddlers">
+<pre>Suggestions
+</pre>
+</div>
 <div created="20210825164044982" modified="20210825164045245" title="$:/GitHub/Branch">
 <pre>main</pre>
 </div>
@@ -12073,8 +12079,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210825164001969" modified="20210825165447209" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20210825164001969" modified="20210825165518185" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210825164004321" modified="20210825164004321" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12085,7 +12091,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>yes</pre>
 </div>
-<div created="20210825165445322" list="$:/Import" modified="20210825165445322" title="$:/StoryList">
+<div created="20210825165445322" list="$:/Import" modified="20210825165516505" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
