--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ Error message and password prompt
 
 <li>$:/view</li>
 
-<li>Suggestionz</li>
+<li>Suggestions</li>
 
-<li>Suggestionz/20210825170120795</li>
+<li>Suggestions/20210825170120795</li>
 
 </ul>
 </p>
@@ -10774,8 +10774,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210825165519414" modified="20210825170134224" title="$:/DefaultTiddlers">
-<pre>Suggestionz
+<div created="20210825165519414" modified="20210825170149507" title="$:/DefaultTiddlers">
+<pre>Suggestions
 </pre>
 </div>
 <div created="20210825164044982" modified="20210825164045245" title="$:/GitHub/Branch">
@@ -12805,7 +12805,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210825165735017" list="Suggestionz Suggestions/20210825170120795" modified="20210825170134229" title="$:/StoryList">
+<div created="20210825165735017" list="Suggestions" modified="20210825170143387" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -12920,10 +12920,10 @@ Error message and password prompt
 <div created="20210825165718409" modified="20210825170112777" title="$:/view">
 <pre>muuri</pre>
 </div>
-<div created="20210825165239451" modified="20210825170134230" stream-list="Suggestionz/20210825170120795" stream-type="default" tags="" title="Suggestionz">
+<div created="20210825165239451" modified="20210825170149510" stream-list="Suggestions/20210825170120795" stream-type="default" tags="" title="Suggestions">
 <pre></pre>
 </div>
-<div created="20210825170120796" modified="20210825170134224" parent="Suggestionz" stream-list="" stream-type="default" title="Suggestionz/20210825170120795">
+<div created="20210825170120796" modified="20210825170149507" parent="Suggestions" stream-list="" stream-type="default" title="Suggestions/20210825170120795">
 <pre>Test</pre>
 </div>
 
